Fix visibility of typing effect on load

--- a/_sass/terminal-style.scss
+++ b/_sass/terminal-style.scss
@@ -1,3 +1,7 @@
+#typing-text {
+    visibility: hidden; /* Nasconde il testo inizialmente */
+  }
+
 .terminal-banner {
     background-color: #1e1e1e;
     color: #a9dde0;
